@@ -1,2 +1,7 @@
 2004-06-08 Magnus Hagdorn
+ * applied a modified version of Carlie Coats' patch
+   http://www.unidata.ucar.edu/content/software/netcdf/intel-f95-patch?unidata=b2187e2bb415beea14be3c189e3933d0
+   use -DIFORT to compile with the Intel f95 compiler
+
+2004-06-08 Magnus Hagdorn
  * initial checkin
